Various spacing, alignment, font fixes

--- a/client/web/src/enterprise/batches/execution/WorkspaceDetails.module.scss
+++ b/client/web/src/enterprise/batches/execution/WorkspaceDetails.module.scss
@@ -1,16 +1,64 @@
+.workspace-detail {
+    color: var(--text-muted);
+    padding: 0 0.375rem;
+
+    &:not(:last-of-type) {
+        border-right: 1px solid var(--border-color);
+    }
+}
+
 .result-card,
 .step-card {
     background-color: var(--body-bg);
 }
 
-.detail-item {
+.collapsible {
+    flex: 1;
+    min-width: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.step-header {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    min-width: 0;
+}
+
+.step-number,
+.result {
     display: inline-block;
-    &:not(:last-child) {
-        &::after {
-            padding: 0 0.375rem;
-            height: 1rem;
-            content: '';
-            border-right: 1px solid var(--border-color-2);
-        }
+    font-weight: normal;
+    white-space: nowrap;
+    margin: 0;
+}
+
+.step-number {
+    margin: 0 0.5rem;
+}
+
+.step-command {
+    min-width: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 0.75rem;
+    line-height: 0.75rem;
+}
+
+.step-time {
+    font-size: 0.75rem;
+    line-height: 0.75rem;
+}
+
+.step-diff-stat {
+    border-right: 1px solid var(--border-color);
+    padding: 0 0.5rem;
+    margin: 0 0.5rem;
+
+    strong {
+        line-height: 1rem;
     }
 }
